# ref-helper

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  coverage.xml  pyproject.toml  retro.md  test.bib
.github/workflows/: python-app.yml
src/: RobotLibrary.py  app.py  bibtex_manager.py  console_io.py  http_util.py  index.py  interpreter.py  robotlibrary.py  stub_bibtex_manager.py  stub_http_util.py  stub_io.py  test.bib
src/commands/: __init__.py  add_reference.py  delete_reference.py  edit_reference.py  index.py  list.py
src/tests/: add.robot  delete.robot  delete_reference_test.py  edit.robot  list.robot  list_test.py  resource.robot
