[tool.poetry]
name = "ref-helper"
version = "0.0.1"
description = "L채hdeviitteiden hallintaohjelma, joka helpottaa kandidaatintutkielman kirjoittamista."
# Sori juuso, en tii채 sun sukunimee :)) - Joni
authors = ["Niko Iljin", "Remi Lehtinen", "Olli Ter채v채", "Veeti Eloranta", "Juuso V_", "Joni Rapo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.6.4"
pylint = "^3.3.1"
autopep8 = "^2.3.1"
robotframework = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

