[tool.poetry]
name = "ref-helper"
version = "0.0.1"
description = "Lähdeviitteiden hallintaohjelma, joka helpottaa kandidaatintutkielman kirjoittamista."
authors = ["Niko Iljin", "Remi Lehtinen", "Olli Terävä", "Veeti Eloranta", "Juuso Vuorela", "Joni Rapo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybtex = "^0.24.0"
setuptools = "^75.6.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.6.4"
pylint = "^3.3.1"
autopep8 = "^2.3.1"
robotframework = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

